--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,16 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.wavefront</groupId>
+			<artifactId>wavefront-spring-boot-autoconfigure</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+			<!-- <scope>system</scope>
+			<systemPath>${basedir}/src/main/resources/lib/wavefront-spring-boot-autoconfigure-2.0.0-SNAPSHOT.jar</systemPath> -->
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -40,7 +46,12 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
-
+	<repositories>
+		<repository>
+	       <id>mylibid</id>
+	       <url>file://${basedir}/src/main/resources/lib</url>
+	   </repository>
+	</repositories>
 	<build>
 		<plugins>
 			<plugin>
@@ -49,5 +60,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
