--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,25 @@
 			<systemPath>${basedir}/src/main/resources/lib/wavefront-spring-boot-autoconfigure-2.0.0-SNAPSHOT.jar</systemPath> -->
 		</dependency>
 		<dependency>
+	      <groupId>io.micrometer</groupId>
+	      <artifactId>micrometer-registry-wavefront</artifactId>
+	    </dependency>
+	    <dependency>
+	      <groupId>io.opentracing.contrib</groupId>
+	      <artifactId>opentracing-spring-cloud-starter</artifactId>
+	      <version>0.3.12</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>io.opentracing</groupId>
+	      <artifactId>opentracing-api</artifactId>
+	      <version>[0.33.0, )</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>com.wavefront</groupId>
+	      <artifactId>wavefront-opentracing-sdk-java</artifactId>
+	      <version>[1.13, )</version>
+	    </dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
