--- a/src/main/resources/wavefront.properties
+++ b/src/main/resources/wavefront.properties
@@ -2,4 +2,4 @@ url=https://longboard.wavefront.com
 token=${WAVEFRONT_TOKEN:12345}
 reporting.prefix=seroter
 application.name=simple-k8s-app
-application.service=deal-service
+application.service=sample-service
